# PrettyDNS

./: Cargo.toml  README.md
.github/workflows/: test.yml
pretty_dns_cache/: Cargo.toml
pretty_dns_cache/src/: cache.rs
pretty_dns_client/: Cargo.toml
pretty_dns_client/src/: client.rs
pretty_dns_message/: Cargo.toml
pretty_dns_message/src/: compression.rs  compression_domain.rs  domain.rs  header.rs  lib.rs  message.rs  qtype.rs  query.rs  resource.rs
pretty_dns_server/: Cargo.toml
pretty_dns_server/src/: cache.rs  server.rs
src/: client.rs  main.rs  message.rs  server.rs
src/message/: header.rs  message.rs  qtype.rs  query.rs  resource.rs
src/server/: cache.rs  server.rs
