[package]
name = "pretty_dns"
version = "0.1.0"
authors = ["Ryota Sakamoto <sakamo.ryota+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
once_cell = "1.7.2"
nom = "7.0.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
chrono = "0.4"
