[package]
name = "pretty_dns"
version = "0.1.0"
authors = ["Ryota Sakamoto <sakamo.ryota+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
tokio = { version = "1.5.0", features = ["full"] }
pretty_dns_server = { path = "./pretty_dns_server" }

[workspace]
members = [
    "pretty_dns_cache",
    "pretty_dns_client",
    "pretty_dns_server",
    "pretty_dns_message",
]
