[package]
name = "pretty_dns_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
chrono = "0.4"
once_cell = "1.7.2"

pretty_dns_client = { path = "../pretty_dns_client" }
pretty_dns_message = { path = "../pretty_dns_message" }
